Add start end time and tag

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
+# 依赖目录
+node_modules/
+vendor/
+
+# 编译输出
+dist/
+build/
+
+# 环境配置
+.env
+.env.local
+.env.*.local
+
+# 日志文件
+*.log
+
+# 系统文件
+.DS_Store
+Thumbs.db
+
+# IDE 配置
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# 数据库
 *.db
-.vscode
+
+# 临时文件
+*.tmp
+*~
+
+# Go 特定文件
+*.exe
+*.test
+*.prof
