--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "vue": "^3.5.12"
   },
   "devDependencies": {
